@@ -1,0 +1,72 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x298
+  RenderBlock {HTML} at (0,0) size 800x298 [color=#FF0000] [bgcolor=#FFFFFF]
+    RenderBody {BODY} at (0,0) size 800x298
+      RenderBlock {H2} at (72,0) size 656x72 [color=#000080]
+        RenderText {TEXT} at (12,46) size 129x24
+          text run at (12,46) width 129: "Hello World!"
+layer at (36,72) size 764x226
+  RenderBlock (relative positioned) {DIV} at (36,72) size 764x226 [border: (12px solid #00000000)]
+    RenderTable {TABLE} at (12,12) size 1x0
+      RenderTableSection {TBODY} at (0,0) size 0x0
+        RenderTableRow {TR} at (0,0) size 0x0
+          RenderTableCell {TD} at (0,0) size 1x0 [r=0 c=0 rs=1 cs=1]
+    RenderBlock {DIV} at (60,60) size 120x12 [bgcolor=#FF0000] [border: (12px solid #000000) none (12px solid #000000)]
+      RenderBlock {DIV} at (12,0) size 144x12
+        RenderText {TEXT} at (0,-1) size 90x12
+          text run at (0,-1) width 90: "                              "
+    RenderBlock (floating) {DIV} at (36,96) size 168x48 [border: none (12px solid #000000)]
+      RenderBlock {DIV} at (12,0) size 144x48 [bgcolor=#FFFF00]
+        RenderBlock {DIV} at (60,12) size 24x24 [bgcolor=#FF0000]
+          RenderBlock (generated) at (0,0) size 24x12 [border: none (12px solid #FFFF00) (12px solid #000000) (12px solid #FFFF00)]
+            RenderText at (0,0) size 0x0
+          RenderBlock (generated) at (0,12) size 24x12 [border: (12px solid #000000) (12px solid #FFFF00) none (12px solid #FFFF00)]
+            RenderText at (0,0) size 0x0
+    RenderBlock {DIV} at (87,75) size 590x0
+      RenderBlock {DIV} at (48,0) size 518x0
+    RenderBlock {DIV} at (48,132) size 668x24
+    RenderBlock {DIV} at (60,168) size 120x12 [bgcolor=#FFFF00] [border: (12px solid #000000) none (12px solid #000000)]
+      RenderInline {DIV} at (0,0) size 2x10
+        RenderText {TEXT} at (12,2) size 2x4
+          text run at (12,2) width 2: " "
+    RenderBlock {DIV} at (12,180) size 740x12
+      RenderBlock {DIV} at (60,0) size 96x12 [color=#FFA500] [bgcolor=#FFFF00] [border: none (24px solid #000000) none (24px solid #000000)]
+    RenderTable {UL} at (96,192) size 48x12 [bgcolor=#FF0000]
+      RenderTableSection at (0,0) size 0x12
+        RenderTableRow at (0,0) size 0x0
+          RenderTableCell {LI} at (0,12) size 12x0 [bgcolor=#000000] [r=0 c=0 rs=1 cs=1]
+          RenderTableCell at (12,0) size 12x12 [r=0 c=1 rs=1 cs=1]
+            RenderTable {LI} at (0,0) size 12x12 [bgcolor=#000000]
+          RenderTableCell {LI} at (24,12) size 12x0 [bgcolor=#000000] [r=0 c=2 rs=1 cs=1]
+          RenderTableCell at (36,0) size 12x12 [r=0 c=3 rs=1 cs=1]
+            RenderListItem {LI} at (0,0) size 12x12 [bgcolor=#000000]
+layer at (132,108) size 48x18
+  RenderBlock (positioned) {P} at (132,108) size 48x18 [bgcolor=#000000] [border: none (6px solid #FFFF00) none]
+layer at (132,144) size 48x15
+  RenderBlock (positioned) {P} at (132,144) size 48x15 [bgcolor=#000000] [border: none (3px solid #FF0000) none]
+layer at (108,120) size 96x12
+  RenderBlock (positioned) {BLOCKQUOTE} at (72,48) size 96x12 [border: none (24px solid #000000) none (24px solid #000000)]
+    RenderBlock (floating) {ADDRESS} at (24,0) size 48x12 [bgcolor=#FFFF00]
+layer at (84,144) size 144x24
+  RenderBlock (positioned) {DIV} at (48,72) size 144x24 [bgcolor=#FF0000]
+    RenderBlock {DIV} at (0,0) size 144x0
+      RenderInline {OBJECT} at (0,0) size 131x14
+        RenderInline {OBJECT} at (0,0) size 131x14
+          RenderImage {OBJECT} at (13,0) size 131x24 [border: (12px solid #000000) none]
+    RenderBlock (floating) {DIV} at (0,0) size 144x24 [border: (12px solid #FF0000) none (12px solid #000000)]
+    RenderBlock {DIV} at (0,0) size 144x24 [border: (24px solid #FFFF00)]
+layer at (84,216) size 144x24
+  RenderBlock (relative positioned) {DIV} at (0,0) size 144x24 [bgcolor=#000000]
+layer at (96,216) size 120x24
+  RenderBlock (positioned) {DIV} at (12,0) size 120x24 [border: (12px solid #FFFF00)]
+    RenderBlock (floating) {SPAN} at (12,0) size 96x12 [border: none (12px solid #00000000) none (12px solid #00000000)]
+      RenderBlock (floating) {EM} at (12,0) size 72x24 [border: (12px solid #FFFF00) none (12px solid #000000) none]
+        RenderBlock {STRONG} at (0,12) size 72x0
+layer at (48,276) size 740x10 scrollHeight 276
+  RenderBlock {DIV} at (12,204) size 740x10
+    RenderTable {TABLE} at (0,0) size 64x276
+      RenderTableSection {TBODY} at (0,0) size 0x276
+        RenderTableRow {TR} at (0,0) size 0x0
+          RenderTableCell {TD} at (0,0) size 64x276 [r=0 c=0 rs=1 cs=1]
+            RenderImage {IMG} at (0,152) size 64x64
